fix: whitespaces e css

--- a/src/main/webapp/resources/css/base.css
+++ b/src/main/webapp/resources/css/base.css
@@ -16,3 +16,10 @@
   display: table-cell;
   vertical-align: middle;
 }
+
+.navbar-app {
+  border-radius: 0;
+  box-shadow: none;
+  margin-bottom: 0;
+  border-top: 0;
+}
